# wakatimeproofilewidget

./: Cargo.toml  README.md
.github/workflows/: update-widget.yml
src/: config.rs  error.rs  main.rs  state.rs
src/provider/: mod.rs
src/provider/discord/: mod.rs  push_to_widget.rs
src/provider/github/: client.rs  mod.rs  queries.rs  stats.rs  types.rs
src/provider/wakatime/: get_code_time_last_7_days.rs  get_code_time_total.rs  get_last_7_days_stats.rs  mod.rs
src/scripts/: format_digital_coding_time.rs  format_total_lines.rs  get_last_7_days_dates.rs  mod.rs
src/types/: appstate.rs  config.rs  mod.rs  wakatime_all_time_stats_response.rs  wakatime_last_7_days_coding_time_response.rs  wakatime_last_7_days_stats_response.rs
